@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.swagger</groupId>
+    <groupId>io.swagger.parser.v3</groupId>
     <artifactId>swagger-parser-project</artifactId>
-    <version>1.0.40-SNAPSHOT</version>
+    <version>2.0.6-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>swagger-parser-project</name>
     <developers>
@@ -17,16 +16,6 @@
             <id>fehguy</id>
             <name>Tony Tam</name>
             <email>fehguy@gmail.com</email>
-        </developer>
-        <developer>
-            <id>webron</id>
-            <name>Ron Ratovsky</name>
-            <email>webron@gmail.com</email>
-        </developer>
-        <developer>
-            <id>fge</id>
-            <name>Francis Galiegue</name>
-            <email>fgaliegue@gmail.com</email>
         </developer>
     </developers>
     <issueManagement>
@@ -63,6 +52,7 @@
                 <version>${surefire-version}</version>
                 <configuration>
                     <testNGArtifactName>none:none</testNGArtifactName>
+                    <argLine>-Djdk.attach.allowAttachSelf</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -114,21 +104,21 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
+                <version>3.0.0</version>
                 <configuration>
                     <aggregate>true</aggregate>
-                    <source>1.7</source>
+                    <source>1.8</source>
                     <encoding>UTF-8</encoding>
                     <maxmemory>1g</maxmemory>
                     <links>
-                        <link>http://java.sun.com/javase/6/docs/api/</link>
+                        <link>http://docs.oracle.com/javase/8/docs/api</link>
                     </links>
                 </configuration>
                 <executions>
@@ -158,7 +148,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.5.201505241946</version>
+                <version>0.8.1</version>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -177,7 +167,7 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
-                        <configuration></configuration>
+                        <configuration />
                     </execution>
                 </executions>
                 <configuration>
@@ -193,14 +183,24 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-core</artifactId>
-                <version>${swagger-core-version}</version>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>${jackson-version}</version>
             </dependency>
             <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-models</artifactId>
-                <version>${swagger-core-version}</version>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson-version}</version>
             </dependency>
             <dependency>
                 <groupId>org.testng</groupId>
@@ -235,17 +235,45 @@
         </dependencies>
     </dependencyManagement>
     <modules>
+        <module>modules/swagger-parser-core</module>
+        <module>modules/swagger-parser-v3</module>
+        <module>modules/swagger-parser-v2-converter</module>
         <module>modules/swagger-parser</module>
-        <module>modules/swagger-compat-spec-parser</module>
     </modules>
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>sonatype-releases</id>
+            <url>https://oss.sonatype.org/content/repositories/releases</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
     <properties>
+        <swagger-parser-v2-version>1.0.40-SNAPSHOT</swagger-parser-v2-version>
         <commons-io-version>2.4</commons-io-version>
         <slf4j-version>1.6.3</slf4j-version>
-        <swagger-core-version>1.5.21</swagger-core-version>
+        <swagger-core-version>2.0.4</swagger-core-version>
         <junit-version>4.8.1</junit-version>
-        <testng-version>6.9.6</testng-version>
-        <jmockit-version>1.19</jmockit-version>
-        <wiremock-version>2.4.1</wiremock-version>
-        <surefire-version>2.18.1</surefire-version>
+        <testng-version>6.14.2</testng-version>
+        <jmockit-version>1.35</jmockit-version>
+        <wiremock-version>2.15.0</wiremock-version>
+        <surefire-version>2.21.0</surefire-version>
+        <commons-lang-version>3.2.1</commons-lang-version>
+        <jackson-version>2.9.5</jackson-version>
     </properties>
+    
 </project>
